test/sema/out_param/out_param_mutable.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s

// CHECK: [[# @LINE + 1 ]]:12: error: a '&' parameter cannot be 'mut'
fn foo(mut x: &number) {}

fn main() {}
